fix(Dark Mode): fix the automatically dark mode on app

--- a/src/global.css
+++ b/src/global.css
@@ -7,6 +7,7 @@
   font-size: 16px;
   color: rgba(255, 255, 255, 0.87);
   background-color: #A65C1C;
+  color-scheme: light;
 }
 
 html,
